--- a/index.html
+++ b/index.html
@@ -259,6 +259,7 @@
                             </div>
                             <br>
                             <img src="img/portfolio/28.png" alt="Carte de visite Yapi Geoffrey Geoffrey-Davis">
+                            <br><br>
                             <img src="img/portfolio/29.png" alt="Carte de visite Yapi Geoffrey Geoffrey-Davis">
                         </div>     
                     </div>
@@ -297,6 +298,12 @@
                                     <li>Poste - <span>Designer</span></li>
                                 </ul>
                             </div>
+                            <br>
+                            <img src="img/portfolio/14.png" alt="Le Multifruits site web">
+                            <br><br>
+                            <img src="img/portfolio/40.gif" style="display: block; margin: auto;" alt="Symphonie Music Maquette design">
+                            <br>
+                            <img src="img/portfolio/41.gif" style="display: block; margin: auto;" alt="Symphonie Music Maquette design">
                         </div>     
                     </div>
                     <!-- Portfolio Item End-->
@@ -327,6 +334,7 @@
                             </div>
                             <br>
                             <img src="img/portfolio/25.png" alt="Symphonie Music Logo">
+                            <br><br>
                             <img src="img/portfolio/27.png" alt="Symphonie Music Logo">
                         </div>     
                     </div>
@@ -362,7 +370,9 @@
                             </div>
                             <br>
                             <img src="img/portfolio/34.png" alt="Le Multifruits site web">
+                            <br><br>
                             <img src="img/portfolio/38.gif" style="display: block; margin: auto;" alt="Le Multifruits site web">
+                            <br>
                             <img src="img/portfolio/35.gif" style="display: block; margin: auto;" alt="Le Multifruits site web">
                         </div>     
                     </div>
@@ -400,6 +410,7 @@
                             </div>
                             <br>
                             <img src="img/portfolio/30.png" alt="Multifruits Logo">
+                            <br><br>
                             <img src="img/portfolio/31.png" alt="Multifruits Logo">
                         </div>     
                     </div>
@@ -430,7 +441,8 @@
                                 </ul>
                             </div>
                             <br>
-                            <img src="img/portfolio/37.gif" alt="SPLTCHR Logo"> 
+                            <img src="img/portfolio/37.gif" alt="SPLTCHR Logo">
+                            <br><br> 
                             <img src="img/portfolio/33.png" alt="SPLTCHR site web">
                         </div>     
                     </div>
@@ -447,7 +459,7 @@
                                 <p><strong>Dans un univers où la musique dématérialisée règne, 
                                     les disques vinyles ont su préserver leur charme et leur authenticité.</strong> 
                                     Pour les passionnés de musique et les artistes, créer son propre vinyle est un rêve réalisable. 
-                                    La pochette du single a été conçue par Léa Dannay (2D artist junior). 
+                                    La pochette du single a été conçue par <strong>Léa Dannay (2D artist junior)</strong>. 
                                     <br><br>
                                     L'objectif du projet était de réaliser la pochette arrière et le macaron pour le vinyle du single
                                      "MOJO" de Tonton Davis.
@@ -460,6 +472,10 @@
                                     <li>Poste - <span>Concepteur Designer UI</span></li>
                                 </ul>
                             </div>
+                            <br>
+                            <img src="img/portfolio/9.png" alt="MOJO Single Cover">
+                            <br><br> 
+                            <img src="img/portfolio/42.png" alt="MOJO Single Cover Back">
                         </div>     
                     </div>
                     <!-- Portfolio Item End-->
@@ -468,7 +484,7 @@
                         <div class="portfolio-item-thumbnail">
                             <img src="img/portfolio/10.png" alt="Les Yeux Rouges Cover">  
                         </div>
-                        <h3 class="portfolio-item-title">Les Yeux Rouges - Tonton Davis Cover</h3>
+                        <h3 class="portfolio-item-title">Les Yeux Rouges Cover</h3>
                         <button type="button" class="btn view-project-btn">Voir le projet</button>
                         <div class="portfolio-item-details">
                             <div class="description">
@@ -517,12 +533,17 @@
                                 </ul>
                             </div>
                             <br>
-                            <img src="img/portfolio/15.jpg" alt="Carte de visite Yapi Geoffrey Geoffrey-Davis">
-                            <img src="img/portfolio/19.jpg" alt="Carte de visite Yapi Geoffrey Geoffrey-Davis">
-                            <img src="img/portfolio/16.jpg" alt="Carte de visite Yapi Geoffrey Geoffrey-Davis">
-                            <img src="img/portfolio/18.jpg" alt="Carte de visite Yapi Geoffrey Geoffrey-Davis">
-                            <img src="img/portfolio/20.jpg" alt="Carte de visite Yapi Geoffrey Geoffrey-Davis">
-                            <img src="img/portfolio/21.jpg" alt="Carte de visite Yapi Geoffrey Geoffrey-Davis">
+                            <img src="img/portfolio/15.jpg" alt="Shooting Tonton Davis">
+                            <br><br>
+                            <img src="img/portfolio/19.jpg" alt="Shooting Tonton Davis">
+                            <br><br>
+                            <img src="img/portfolio/16.jpg" alt="Shooting Tonton Davis">
+                            <br><br>
+                            <img src="img/portfolio/18.jpg" alt="Shooting Tonton Davis">
+                            <br><br>
+                            <img src="img/portfolio/20.jpg" alt="Shooting Tonton Davis">
+                            <br><br>
+                            <img src="img/portfolio/21.jpg" alt="Shooting Tonton Davis">
                         </div>     
                     </div>
                     <!-- Portfolio Item End-->
@@ -605,7 +626,7 @@
 
     <script src="js/script.js"></script>
     <footer>
-        <p>Copyright Yapi / Geoffrey-davis, France 2023.</p>
+        <p>Copyright / YAPI Geoffrey-davis, France 2023.</p>
     </footer>
 </body>
 </html>
